@startuml


class Location {
  - id: ObjectId
  - name: String
  - type: String
  - parentId: ObjectId
}

Location "1" --* "n" Location : pertenece

class Enterprise {
  - id: ObjectId
  - businessName: String
  - tradeName: String
  - taxId: String {11 digits} // RUC in Peru
  - fiscalAddress: String
  - locationId: ObjectId
  - phone: String
  - email: String
  - website: String
  - imageUrl: String
  - assetsIds: Array<ObjectId>
  - employeesIds: Array<ObjectId>
  - created: DateTime
  - updated: DateTime
}

class Employee {
  - _id: ObjectId
  - names: String
  - lastNames: String
  - documentNumber: String
  - documentType: String
  - email: String
  - phone: String
  - imageUrl: String
  - created: DateTime
  - updated: DateTime
  - userId: ObjectId
}

class Priority {
  - _id: ObjectId
  - name: String
  - created: DateTime
  - updated: DateTime
}

class Asset {
  - _id: ObjectId
  - name: String
  - code: String
  - description: String
  - documents: Array[DocumentEmbedded]
  - created: DateTime
  - updated: DateTime
}

class Tag{
  - _id: ObjectId
  - name: String
  - created: DateTime
  - updated: DateTime
}

class IssueState {
  - _id: ObjectId
  - name: String
  - created: DateTime
  - updated: DateTime
}

class Issue {
  - _id: ObjectId
  - resume: String
  - description: String
  - issueStateId: ObjectId
  - priorityId: ObjectId
  - assetsIds: Array[ObjectIds]
  - tagsIds: Array[ObjectIds]
  - visorsIds: Array[ObjectIds]
  - editorsIds: Array[ObjectIds]
  - histories: Array[ObjectIds]
  - documents: Array[DocumentEmbedded]
  - reporterId: ObjectId
  - reportered: DateTime
  - created: DateTime
  - updated: DateTime
}

class History {
  - _id: ObjectId
  - description: String
  - reportered: ObjectId
  - documents: Array[DocumentEmbedded]
  - created: DateTime
  - updated: DateTim
}

class DocumentEmbedded <<embedded>>{
  - _id: ObjectId
  - name: String
  - size: Integer
  - mime: String
  - url: String
  - created: DateTime
}

class Track {
  - _id: ObjectId
  - issue_id: ObjectId
  - logs: Array[Log]
}

class Log <<embedded>>{
  - _id: ObjectId
  - operation: String
  - description: String
  - user_id: String
  - created: DateTime
}

class UserEmbedded <<embedded>> {
  + _id: ObjectId
  + username: String
  + user_id: Integer
  + googleUserId: String
}

class Roles {
  + _id: ObjectId
  + name: String
  + description: String
  + created: Datetime
  + updated: Datetime
}

Enterprise "n" o-- "n" Asset : tiene
Enterprise "n" o-- "n" Employee : tiene
Issue "n" *-- "1" Employee : crea
Issue "n" o-- "n" Employee : mira
Issue "n" o-- "n" Employee : edita
Issue "n" *-- "1" IssueState : tiene
Issue "n" *-- "1" Priority : tiene
Issue "n" o-- "n" Asset : tiene
Issue "n" o-- "n" Tag : tiene
Issue "1" o-- "n" History : tiene
Issue "1" o-- "n" DocumentEmbedded : tiene
History "1" o-- "n" DocumentEmbedded : tiene
History "1" *-- "n" Employee : genera
Track "1" *-- "n" Log : registra
Issue "1" --* "n" Track : registra
Roles "1" --* "n" User : tiene
User "1" --o "1" Employee : tiene

@enduml